fixed title overflow 4th

--- a/src/cryptoview-structure/AboutExperts.css
+++ b/src/cryptoview-structure/AboutExperts.css
@@ -14,4 +14,8 @@
     font-size: 3rem;
     margin-top: 1rem;
   }
+  #news{
+    gap:1.5rem;
+    
+  }
 }
